Shuffle game list when opening poll page

--- a/polls/templates/polls/vote_add.html
+++ b/polls/templates/polls/vote_add.html
@@ -108,7 +108,7 @@
       </div>
 
       <div class="vote-buttons">
-        <button type="button" class="btn btn-warning" id="shuffleButton">Перемешать</button>
+        <!-- button type="button" class="btn btn-warning" id="shuffleButton">Перемешать</button -->
         <button type="submit" class="btn btn-primary">Проголосовать</button>
         <button type="button" class="btn btn-secondary" onclick="location.href='{% url 'poll_list' %}'">Отмена</button>
       </div>
