--- a/polls/templates/polls/poll_add.html
+++ b/polls/templates/polls/poll_add.html
@@ -90,25 +90,10 @@ document.addEventListener("DOMContentLoaded", () => {
       </div>
     </div>
 
-    <input type="hidden" name="selectedIds" aria-hidden="true"/>
-<!--
-    <div class="mt-3">
-      <label for="start_date" class="form-label fw-bold">Дата начала</label>
-      <input type="datetime-local" class="form-control" id="start_date" name="start_date" required disabled>
-    </div>
+    <input type="hidden" name="selectedIds" id="selectedIds" aria-hidden="true"/>
 
-    <div class="mt-3">
-      <label for="end_date" class="form-label fw-bold">Дата окончания</label>
-      <input type="datetime-local" class="form-control" id="end_date" name="end_date" required disabled>
-    </div>
-
-    <div class="form-check mt-3">
-      <input type="checkbox" class="form-check-input" id="anonymous" name="anonymous" disabled>
-      <label class="form-check-label" for="anonymous">Анонимное голосование</label>
-    </div>
--->
     <div class="d-flex justify-content-end gap-2 mt-3">
-      <button type="submit" class="btn btn-primary">Создать</button>
+      <button type="submit" class="btn btn-primary" id="submitBtn" disabled>Создать</button>
       <button type="button" class="btn btn-warning" id="resetBtn">Сбросить</button>
       <a href="{% url 'poll_list' %}" class="btn btn-secondary">Отмена</a>
     </div>
